--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,7 +11,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintRight_toRightOf="parent"
-			android:layout_marginBottom="16dp"
+			android:layout_marginBottom="@dimen/layout_margin"
 			android:text="NEXT"
 			android:textAllCaps="true"
 			android:textStyle="bold"
