--- a/app/src/main/res/layout/activity_operating.xml
+++ b/app/src/main/res/layout/activity_operating.xml
@@ -5,31 +5,32 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".OperatingActivity">
+		tools:context=".OperatingActivity"
+		android:background="@android:color/background_dark">
 
 	<TextView
-			android:id="@+id/Acc_text"
-			android:layout_width="0dp"
-	        android:layout_height="wrap_content"
-			app:layout_constraintTop_toBottomOf="@id/Mg_text"
-			app:layout_constraintBottom_toBottomOf="parent"
+			android:id="@+id/test_Text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			app:layout_constraintLeft_toLeftOf="parent"
-			android:layout_marginLeft="@dimen/layout_margin"
-			android:text="Acc"
-			android:gravity="center_horizontal"
-
+			app:layout_constraintRight_toRightOf="parent"
+			android:layout_marginTop="@dimen/layout_margin"
+			android:text="TEST"
+			android:textSize="36sp"
+			android:textColor="@android:color/holo_orange_light"
 	/>
 
-	<TextView
-			android:id="@+id/Mg_text"
-			android:layout_width="0dp"
+	<Button
+			android:id="@+id/startAndEnd_button"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/Acc_text"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintLeft_toLeftOf="parent"
-			android:layout_marginLeft="@dimen/layout_margin"
-			android:text="Mg"
-			android:gravity="center_horizontal"
+			app:layout_constraintRight_toRightOf="parent"
+			android:layout_marginBottom="@dimen/layout_margin"
+			android:text="START"
+			android:textAllCaps="true"
+			android:textStyle="bold"
 	/>
 
 </android.support.constraint.ConstraintLayout>
