--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -17,4 +17,9 @@
 			android:textStyle="bold"
 	/>
 
+	<ImageView
+			android:id="@+id/imageV"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
