--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -19,6 +19,11 @@
 
 	<ImageView
 			android:id="@+id/imageV"
+			android:src="@drawable/noddle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"/>
 
